# preflight

./: README.md  pyproject.toml
preflight/: __init__.py  advisor.py  cli.py  config.py  display.py  exporter.py  plugins.py  runner.py
tests/: test_config.py  test_plugins.py  test_runner.py
